react-app/src/components/SplashPage/SplashPage.css
.main-bg {
  background-image: url("https://i.ibb.co/VCwtBxh/redcharlie-ZH2-Qo9-So3-Xg-unsplash.jpg");
  background-size: cover;
  background-color: #d6ecef;
  background-repeat: no-repeat;
  min-width: 100%;
  max-width: 80%;
  background-position: center;
  height: 900px;
}
.main-bg-1 {
  background-image: url("https://i.ibb.co/x2pGh2M/touann-gatouillat-vergos-S-5qu7iw-Qfc-unsplash.jpg");
  background-size: cover;
  background-color: #d6ecef;
  background-repeat: no-repeat;
  min-width: 100%;
  max-width: 80%;
  background-position: center;
  height: 900px;
  margin: 0px px -200px -200px;
  border: 5px solid white;
  width: 300px;
  height: 850px;
  object-fit: contain;
}

.homeFooter {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100px;
  background-color: rgb(85, 85, 85);
}

.homeAboutContainer {
  display: flex;
  justify-content: space-between;
  width: 20%;
}

.homeAboutImg {
  height: 64px;
  width: auto;
}

.title {
  display: flex;
  justify-content: center;
  bottom: 20px;
  color: white;
  font-family: Georgia, sans-serif;
  font-size: 4em;
  letter-spacing: -2px;
  text-shadow: 0 0 5px black;
}

.about-site {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 22px;
  font-weight: 400;
  display: flex;
  justify-content: center;
  height: 200px;
  border-radius: 10px;
  width: 400px;
  flex-wrap: wrap;
  margin-left: 754px;
  margin-bottom: 20px;
  box-sizing: border-box;
  padding: 15px;
  margin-top: 15px;
  box-shadow: 0 5px 15px -2px rgb(201, 201, 201);
  /* right: 50px; */
  background-color: rgba(255, 255, 255, 0.904);
}

.about-site-text-color {
  color: #80b4df;
}

.about {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 22px;
  font-weight: 300;
  display: flex;
  justify-content: center;
  height: 200px;
  /* border: 1px solid black; */
  border-radius: 10px;
  width: 400px;
  flex-wrap: wrap;
  margin-left: 15px;
  margin-bottom: 20px;
  box-sizing: border-box;
  padding: 15px;
  margin-top: 15px;
  box-shadow: 0 5px 15px -2px rgb(201, 201, 201);
  /* display: flex; */
  flex-direction: column;
  justify-content: space-between;
  right: 50px;
  /* align-items: center; */
  background-color: rgba(255, 255, 255, 0.317);
}

